change drone state implementation
