# http/apis/drone.go
@@ -140,3 +140,33 @@ func (api DroneAPIs) GetAll(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 	w.Write(response)
 }
+
+// @Summary		Update Drone State
+// @Description	change drone state
+// @Tags			Drone
+// @Accept			json
+// @Produce		json
+// @Param			request	body		entity.UpdateDroneStateRequest	true	"Request of load medications"
+// @Success		200		{object}	entity.DroneRequest
+// @Failure		400		{string}	string	"Bad Request"
+// @Failure		500		{string}	string	"Internal Server Error"
+// @Router			/drone/state [patch]
+func (api DroneAPIs) UpdateDroneState(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	requestByte, err := ioutil.ReadAll(r.Body)
+	if err != nil {
+		log.Printf("[Error]: %v", err.Error())
+		w.WriteHeader(http.StatusInternalServerError)
+		w.Write([]byte(fmt.Sprintf(`{ "error" : "%s"}`, err.Error())))
+		return
+	}
+	response, err := api.droneUseCase.UpdateDroneState(ctx, requestByte)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write([]byte(fmt.Sprintf(`{ "error" : "%s"}`, err.Error())))
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Write(response)
+}
