# validators/drone.go
@@ -13,10 +13,9 @@ func ValidateDroneRequest(droneRequest entity.DroneRequest) error {
 		return str == string(entity.Light) || str == string(entity.Middle) || str == string(entity.Cruiser) || str == string(entity.Heavy)
 	})
 	govalidator.TagMap["state"] = govalidator.Validator(func(str string) bool {
-		return str == string(entity.IDLE) || str == string(entity.LOADING) || str == string(entity.DELIVERED) || str == string(entity.RETURNING)
+		return str == string(entity.IDLE) || str == string(entity.LOADING) || str == string(entity.LOADED) || str == string(entity.DELIVERING) || str == string(entity.DELIVERED) || str == string(entity.RETURNING)
 	})
 
-	// Validate the DroneRequest struct
 	if _, err := govalidator.ValidateStruct(droneRequest); err != nil {
 		var validationErrors []string
 		for _, err := range err.(govalidator.Errors) {
@@ -25,4 +24,20 @@ func ValidateDroneRequest(droneRequest entity.DroneRequest) error {
 		return fmt.Errorf("[Error]: %s", strings.Join(validationErrors, ", "))
 	}
 	return nil
+}
+
+func ValidateUpdateDroneStateRequest(updatDroneStateRequest entity.UpdateDroneStateRequest) error {
+	govalidator.TagMap["state"] = govalidator.Validator(func(str string) bool {
+		return str == string(entity.IDLE) || str == string(entity.LOADING) || str == string(entity.LOADED) || str == string(entity.DELIVERING) || str == string(entity.DELIVERED) || str == string(entity.RETURNING)
+	})
+
+	if _, err := govalidator.ValidateStruct(updatDroneStateRequest); err != nil {
+		var validationErrors []string
+		for _, err := range err.(govalidator.Errors) {
+			validationErrors = append(validationErrors, err.Error())
+		}
+		return fmt.Errorf("[Error]: %s", strings.Join(validationErrors, ", "))
+	}
+	return nil
+
 }
